# QShield

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
cmake/: FindOQS.cmake
docs/: ARCHITECTURE.md  ROADMAP.md  WHITEPAPER.md
include/qshield/: crypto.h  hybrid.h  qshield.h  tls.h  version.h
src/crypto/: CMakeLists.txt  dilithium.c  hybrid.c  kyber.c  qshield_init.c  secure_mem.c
src/tls/: CMakeLists.txt  tls_ctx.c  tls_handshake.c
tests/: CMakeLists.txt  test_helpers.h
tests/crypto/: CMakeLists.txt  test_dilithium.c  test_hybrid.c  test_kyber.c
tests/tls/: CMakeLists.txt  test_tls_handshake.c
tools/: CMakeLists.txt  keygen.c
